--- a/popup.css
+++ b/popup.css
@@ -89,22 +89,29 @@ ul {
 }
 
 .button {
-    display: block;
-    width: 100%;
-    margin-top: 15px;
-    padding: 10px;
-    text-align: center;
-    background-color: #2196F3;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+    background-color: #e87d3e; /* Orange button color */
+    color: black; /* Black text */
     font-size: 16px;
     font-weight: bold;
+    font-family: 'Press Start 2P', sans-serif; /* Retro pixel font (import it) */
+    border: 4px solid black;
+    padding: 10px 20px;
+    display: inline-block;
+    text-align: center;
+    text-transform: uppercase;
+    cursor: pointer;
+    box-shadow: 0px 2px 0px #C9A600;
+    /* box-shadow: 4px 4px black; */
+    transition: all 0.1s ease-in-out;
+}
+
+.button:active {
+    transform: translateY(4px); /* Moves the button down */
+    box-shadow: 0px 1px 0px #C9A600;
 }
 
 .button:hover {
-    background-color: #1976D2;
+    background-color: #E6AA3C;
 }
 
 .toggle-container {
